# RoboManipAug

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
eval_results/ablation_study/: RMA_AblationStudy_MujocoCabinetHinge_20250801.yaml  RMA_AblationStudy_MujocoDoor_20250801.yaml  RMA_AblationStudy_MujocoInsert_20250730.yaml  RMA_AblationStudy_MujocoToolboxPick_20250805.yaml  plot_ablation_study_all_avg.py
eval_results/baseline_comparison/: RMA_BaselineComparison_RealPickTape_20250806.yaml  plot_baseline_comparison_all.py  plot_baseline_comparison_all_sim.py
robo_manip_aug/: __init__.py
robo_manip_aug/assets/mujoco_ur5e/: mujoco_ur5e.urdf
robo_manip_aug/common/: CollectAugmentedDataBase.py  MotionInterpolator.py
robo_manip_aug/eval_results/ablation_study/: RMA_AblationStudy_MujocoCabinetHinge_20250801.yaml  RMA_AblationStudy_MujocoDoor_20250801.yaml  RMA_AblationStudy_MujocoInsert_20250730.yaml  RMA_AblationStudy_MujocoToolboxPick_20250805.yaml  plot_ablation_study_all.py  plot_ablation_study_all_avg.py  plot_ablation_study_single.py
robo_manip_aug/eval_results/baseline_comparison/: RMA_BaselineComparison_MujocoCabinetHinge_ObjPos010_20250730.yaml  RMA_BaselineComparison_MujocoDoor_ObjPos010_20250730.yaml  RMA_BaselineComparison_MujocoInsert_ObjPos005_20250728.yaml  (+12 more)
robo_manip_aug/lib/: CollectAdditionalDataBase.py  CollectAugmentedDataBase.py  MathUtils.py  MotionInterpolator.py
robo_manip_aug/misc/: AddGripperRelToRmbData.py  PlotAugmentedData.py  VisualizeRollout.py  VisualizeTrainingData.py
robo_manip_aug/vis/: vis_demo.py
(+37 files in other folders)
